# abb-offline-coder

./: .gitignore  CITATION.cff  EXECUTION_LOG.md  LICENSE  PROJECT_PROFILE.md  PROJECT_STATUS.md  README.md  README_EN.md  README_PUBLIC_DRAFT.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/hooks/: session-start.sh
abb_agent/: __init__.py  agent.py  config.py
abb_agent/cli/: __init__.py  main.py
abb_agent/cli/commands/: __init__.py  chat.py  doctor.py  gen.py  init.py  kb.py
abb_agent/eval/: __init__.py  cases.json  harness.py
abb_agent/knowledge/: __init__.py  builder.py  chunker.py
abb_agent/knowledge/parsers/: __init__.py  html_parser.py  mod_parser.py  (+1 more)
abb_agent/llm/: __init__.py  ollama_client.py
abb_agent/rag/: __init__.py  context_builder.py  embedder.py  models.py  query_rewriter.py  retriever.py  vector_store.py
abb_agent/rapid/: __init__.py  formatter.py  module_template.py  painting_helpers.py  system_bundle.py  validator.py
docs/: ARCHITECTURE.md  TROUBLESHOOTING.md  WINDOWS.md  index.html  slide-art-prompts.md
docs/field/: README.md
examples/door_zigzag_irc5/: BASE.sys  DoorPaint_IRC5.mod  MANIFEST.ok  README.md  T_ROB1.pgf
examples/door_zigzag_irc5p/: BASE.sys  DoorPaint_IRC5P.mod  MANIFEST.ok  README.md  T_ROB1.pgf
report/: README.md  combined.tex  evidence.tex  full_package.tex  main.tex  online_defense_guide.tex  poster.tex  script.tex  slides.tex  slides_notes.tex
scripts/: build_examples.py  build_knowledge_base.py  bundle.bat  bundle.sh  download_models.py  eval.py  install.bat  install.sh  package_offline.ps1  package_offline.sh
tests/: conftest.py
tests/unit/: test_agent_postprocess.py  test_agent_postprocess_irc5p.py  test_brushdata_safety.py  test_bundle_safety.py  test_chunker.py  test_cli_controller.py  test_config_io_whitelist.py  test_context_builder.py  test_eval_harness.py  test_few_shot_examples.py  test_mod_parser.py  test_prompt_templates_irc5p.py  test_query_rewriter.py  test_rag_models.py  test_rapid_formatter.py  test_rapid_module_template.py  test_rapid_module_template_irc5p.py  test_rapid_painting_helpers.py  test_rapid_painting_helpers_irc5p.py  test_rapid_validator.py  test_rapid_validator_irc5p.py  test_system_bundle.py  test_system_bundle_encoding.py  test_validator_fixes.py
(+9 files in other folders)
